<resources>
    <string name="app_name">Earn Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EarnWith">EarnWithQuiz</string>
    <string name="CreateAn">Create An Account</string>
    <string name="signin">Sign In Here</string>
    <string name="FullName">Full Name</string>
    <string name="eamil_address">Email Address</string>
    <string name="refer_code_optional">Refer Code (optional)</string>
    <string name="submit">Submit</string>
    <string name="Policy">By signing up you agree to our privacy policy and terms and conditions. Click here…</string>
    <string name="enter_your_name1">Enter your name</string>
    <string name="update_profile1">Update Profile</string>
    <string name="todo">TODO</string>
    <string name="enter_your_name2">Enter your name</string>
    <string name="update_profile2">Update Profile</string>
    <string name="todo11">TODO</string>
    <string name="enter_your_name3">Enter your name</string>
    <string name="update_profile3">Update Profile</string>
    <string name="todo10">TODO</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="update_profile">Update Profile</string>
    <string name="todo9">TODO</string>
    <string name="fifteen">15</string>
    <string name="textforsymbol">-/-</string>
    <string name="wait_a_bit1">Wait a bit!</string>
    <string name="todo8">TODO</string>
    <string name="todo7">TODO</string>
    <string name="quit1">Quit</string>
    <string name="next1">Next</string>
    <string name="todo6">TODO</string>
    <string name="instructions">Instructions :</string>
    <string name="choose_a_category">-Choose a Category</string>
    <string name="play_quiz">-Play Quiz</string>
    <string name="get_coins">-Get Money</string>
    <string name="earn_money">-Withdraw Money</string>
    <string name="spin_wheel">গেইম খেলুন</string>
    <string name="game_2">গেইম খেলুন-২</string>
    <string name="share_this_app">শেয়ার করুন</string>
    <string name="todo5">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo1">TODO</string>
    <string name="type_your_name">Type your name</string>
    <string name="give_a_feedback">Give a feedback</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="current_coins1">Current Coins</string>
    <string name="zero">0</string>
    <string name="HowRequiredCoins">২৪ ঘন্টা অপেক্ষা করুন ক্যাশ আউটের পরে</string>
    <string name="rules">আপনার প্রথম ক্যাশ আউটের টাকা পাওয়ার পরে পরবর্তী ক্যাশ আউটের চেষ্টা করুন।</string>
    <string name="paypal_email_address">PayPal Email Address</string>
    <string name="send_request">Cash Out</string>
    <string name="send_requestTwentyThousand">Cash Out (25TK)</string>
    <string name="send_requestFortyThousand">Cash Out (50TK)</string>
    <string name="send_requestFiftyThousand">Cash Out (150TK)</string>
    <string name="send_requestOverTwoLakh">Cash Out (500TK)</string>
    <string name="current_coins">Current Balance</string>
    <string name="zero1">0</string>
    <string name="HowRequiredCoins1">50,000 coins required to withdraw</string>
    <string name="rules1">You can use any one option from below. Please enter Email or bKash Number to get your withdraw. N.B: Only for Bangladesh.(bKash)</string>
    <string name="paypal_email_address1">PayPal Email Address</string>
    <string name="bkash_number1">bKash Number</string>
    <string name="send_request1">Send Request</string>
    <string name="todo12">TODO</string>
    <string name="category">Category</string>
    <string name="todo13">TODO</string>
    <string name="one">#1</string>
    <string name="todo14">TODO</string>
    <string name="values">24665</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="rnak">Rnak</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="eightbyten">8/10</string>
    <string name="earned_coins">EARNED TAKA</string>
    <string name="fivehundred">500</string>
    <string name="share">Share</string>
    <string name="restart">Restart</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="congratulations1">Congratulations!</string>
    <string name="your_score1">YOUR SCORE</string>
    <string name="_8_10">8/10</string>
    <string name="earned_coins1">EARNED COINS</string>
    <string name="_500">500</string>
    <string name="restart1">Restart</string>
    <string name="share1">Share</string>
    <string name="_15">20</string>
    <string name="dash">-/-</string>
    <string name="wait_a_bit">Wait a bit!</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="PrivacyDetails"><p>Please We are
        removing you if we find any activity.We are removing you if we find any activity.
        We are removing you if we find any activity.We are removing you if we find any activity.
        We are removing you if we find any activity
        .We are removing you if we find any activity.
        We are removing you if we find any activity.</p></string>
    <string name="enter_your_namenew">Enter Your Name</string>
    <string name="agree1">Agree</string>
    <string name="deny2">Deny</string>
    <string name="how_to_play_quiz">How to play Quiz ?</string>
    <string name="quiz_info">In order to play quiz, you have to select any one of the categories first. There will be five MCQ questions in each category. 0.05 taka will be found in five correct answer. There will be 0.01 taka for each correct answer. Each incorrect answer will be deducted by 0.01 taka.</string>
    <string name="earn_more_info">To earn more money, you have to reach the destination amounts of taka very fast. To reach the destination amounts of taka very fast you can play game. You can earn as much as you play and as frequency for every withdraw.</string>
    <string name="withdraw_way">You must earn at least 15 taka to withdraw. After earning 15 taka you have to choose one of the given options. If you want to withdraw using PayPal, provide PayPal email address. And if you want to withdraw using bKash number, provide bKash number.</string>
    <string name="play_quiz_info">Play more Quiz and earn more money. We will send your withdraw within 3 days.</string>
    <string name="learn_more">Learn more...</string>
    <string name="let_s_start_earning">Let\'s Start Earning</string>
    <string name="you_got_45_coins">You got 45 coins!</string>
    <string name="mahmud_islam">Mahmud Islam</string>
    <string name="welcome_to">Welcome</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="copy">Copy</string>
    <string name="account_refer_code_1500_coins">নতুন Account খুলে দিতে আপনার Refer Code টি ব্যাবহার করুন। আর সাথে সাথে পেয়ে যান ৫ টাকা।</string>
    <string name="refer_code">নিচের Refer Code টি ব্যাবহার করুনঃ</string>
    <string name="refer_code_for_menu">Refer Code</string>
    <string name="rate_app_for_menu">Rate App</string>
    <string name="admin_message">Admin Message</string>
    <string name="password_6_digits">password(6 digits)</string>
    <string name="earn_with_learn">আপনি ৫ টাকা বোনাস পেয়েছেন</string>
    <string name="refer_rules">বিঃদ্রঃ-রেফারের টাকা শুধুমাত্র তখনই উত্তোলন করতে পারবেন যখন আপনার রেফারকৃত ইউজার কমপক্ষে একবার উইথড্র করবে।</string>
    <string name="bkash_number">bKash Number</string>
    <string name="login">LOGIN</string>
    <string name="password_6_digit">password(6 digit)</string>
    <string name="by_signing_up_you_are_agreeing_to_our_terms_of_service">By signing up you are agreeing to our terms of service</string>
    <string name="how_to_earn_more">How to earn more ?</string>
    <string name="how_to_withdraw">How to Withdraw ?</string>
    <string name="ok_i_got_it">OK, I got it !</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="please_sign_up_at_first_to_continue">Please Sign Up at first to continue.</string>
    <string name="taka_uttolon_korun">টাকা উত্তোলন করুন</string>
    <string name="amount_taka">Amount Taka</string>
    <string name="cash_out_for_bkash">Cash Out</string>


</resources>