<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_2_start"
    tools:context=".activities.MainActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60mdp"
        android:background="@drawable/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130mdp"
        android:layout_marginStart="@dimen/_25mdp"
        android:layout_marginLeft="@dimen/_25mdp"
        android:layout_marginTop="@dimen/_13mdp"
        android:layout_marginEnd="@dimen/_25mdp"
        android:layout_marginRight="@dimen/_25mdp"
        android:background="@drawable/rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_70mdp"
        android:layout_height="@dimen/_70mdp"
        android:layout_marginStart="@dimen/_24mdp"
        android:contentDescription="@string/todo7"
        app:lottie_rawRes="@raw/money"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17mdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="@dimen/_15font_mdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_category"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_quiz"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_coins"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earn_money"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_5mdp"
        android:layout_marginLeft="@dimen/_5mdp"
        android:layout_marginTop="@dimen/_5mdp"
        android:background="@color/light_grey"
        android:layout_marginEnd="@dimen/_5mdp"
        android:layout_marginRight="@dimen/_5mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinWheelBtnId" />

    <TextView
        android:id="@+id/spinWheelBtnId"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35mdp"
        android:layout_marginStart="@dimen/_18mdp"
        android:layout_marginTop="@dimen/_5mdp"
        android:layout_marginEnd="@dimen/_5mdp"
        android:background="@drawable/spin_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingStart="@dimen/_10mdp"
        android:paddingLeft="@dimen/_10mdp"
        android:text="@string/spin_wheel"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        app:drawableLeftCompat="@drawable/ic_spin"
        app:layout_constraintEnd_toStartOf="@+id/shareId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/shareId"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35mdp"
        android:layout_marginStart="@dimen/_5mdp"
        android:layout_marginLeft="@dimen/_5mdp"
        android:layout_marginTop="@dimen/_5mdp"
        android:layout_marginEnd="@dimen/_18mdp"
        android:layout_marginRight="@dimen/_18mdp"
        android:background="@drawable/share_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/_10mdp"
        android:text="@string/share_this_app"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinWheelBtnId"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:drawableLeftCompat="@drawable/ic_share"
        android:paddingStart="@dimen/_10mdp"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>